@@ -1,3 +1,9 @@
+2014-11-11  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	PR bootstrap/63699
+	PR bootstrap/63750
+	* plugin.cc: Don't include <string>.
+
 2014-10-29  Jakub Jelinek  <jakub@redhat.com>
 	    Phil Muldoon  <pmuldoon@redhat.com>
 
